--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Brain Image Data
 description: Brain image data
-google_analytics: UA-532890-10
+google_analytics: G-XFQCVND7S6
